# whatsapp-local-ai-chat-analyer

./: .gitignore  README.md  pyproject.toml  requirements.txt
wachat/: __init__.py  chat.py  cli.py  config.py  ingest.py  models.py  parser.py  retrieval.py
