[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wachat"
version = "0.1.0"
description = "Turn an exported WhatsApp chat into a citation-backed local chatbot."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.1.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[project.scripts]
wachat = "wachat.cli:app"

[tool.setuptools]
packages = ["wachat"]
